--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="card  text-light" id="web">
                         <div class="card-body ">
                             <div class="h1 mb-3">
-                               <img src="/1st-images/zuri-training-img.svg" alt="training">
+                               <img src="1st-images/zuri-training-img.svg" alt="training">
                             </div>
                             <p class="card-text">
                                 We understand a complete beginner cannot become a professional after a few weeks, 
@@ -58,7 +58,7 @@
                     <div class="card text-light">
                         <div class="card-body" id="card-body-2">
                             <div class="h1 mb-3">
-                            <img src="/1st-images/zuri-internship-img.svg" alt="internship">
+                            <img src="1st-images/zuri-internship-img.svg" alt="internship">
                             </div>
                             <p class="card-text">
                                 We place you in a work simulation. We give you tasks every week, 
@@ -73,7 +73,7 @@
                     <div class="card text-light" id = "plan">
                         <div class="card-body ">
                             <div class="h1 mb-3">
-                               <img src="/1st-images/zuri-talent-img.svg" alt="talent">
+                               <img src="1st-images/zuri-talent-img.svg" alt="talent">
                             </div>
                             <p class="card-text">
                                 Keeping pace with projects and being on the look out for the extremely 
@@ -88,8 +88,8 @@
             </div>
         </div>
     <div class="background">
-        <img src="/1st-images/dots left.png" alt="left" class="left">
-        <img src="/1st-images/Dots.png" alt="right" class="right">
+        <img src="1st-images/dots left.png" alt="left" class="left">
+        <img src="1st-images/Dots.png" alt="right" class="right">
     </div>
     </section>
     <div class="footer-clean">
@@ -97,7 +97,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-5 col-md-3 item">
-                 <img src="/1st-images/zuri-logo-full.svg" alt="logo">
+                 <img src="1st-images/zuri-logo-full.svg" alt="logo">
                     </div>
                     <div class="col-sm-3 col-md-3 item">
                         <h5>Links</h5>
@@ -117,10 +117,10 @@
 
                     <div class="col-lg-2 item social">
                         <h4 class="follow">Follow us</h4>
-                        <a href="#"><img class ="socials"src="/images/facebook.png" alt=""></i></a>
-                        <a href="#"> <img class ="socials" src="/images/twitter.png" alt="" srcset=""></a>
-                        <a href="#"><img class ="socials" src="/images/insta.png" alt="" srcset=""></a>
-                        <a href="#"><img class ="socials" src="/images/linkedln.png" alt="" srcset=""></a>
+                        <a href="#"><img class ="socials"src="images/facebook.png" alt=""></i></a>
+                        <a href="#"> <img class ="socials" src="images/twitter.png" alt="" srcset=""></a>
+                        <a href="#"><img class ="socials" src="images/insta.png" alt="" srcset=""></a>
+                        <a href="#"><img class ="socials" src="images/linkedln.png" alt="" srcset=""></a>
                        
                     </div>
                     <hr>
