--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css
-    ">
+    "> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
    
     <title>Zuri Training</title>
@@ -24,13 +24,13 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="whyus"> Why Us?</a>
+            <a href="#whyus"> Why Us?</a>
           </li>
           <li>
-            <a href="stacks">Stacks Covered</a>
+            <a href="#stacks">Stacks Covered</a>
           </li>
           <li>
-            <a href="faqs">FAQ'S</a>
+            <a href="#faqs">FAQ'S</a>
           </li>
         </ul>
         
@@ -70,7 +70,7 @@
 <hr>
  <!-- end of header -->
  <!-- section -->
- <section class=" p-1 p-lg-0 pt-lg-1 text-center text-sm-start">
+ <section class=" p-1 p-lg-0 pt-lg-1 text-center text-sm-start" id="about">
     <div class="d-md-flex align-items-center justify-content-between" id="two">
         <div class="text-2">
             <p>INGRESSIVE FOR GOOD WAS LAUNCHED IN JULY 2020 WITH NO DOLLAR IN DONATION...</p>
@@ -87,7 +87,7 @@
         <hr>
         <!-- end of section -->
         <!-- first section -->
-        <section class=" p-5 p-lg-5 pt-lg-1 text-center text-sm-start">
+        <section class=" p-5 p-lg-5 pt-lg-1 text-center text-sm-start" id="whyus">
           <div class="d-md-flex align-items-center justify-content-between" id="three">
               <div class="text-4">
                 <img src="2nd-images\section3wire.svg" class ="wire2" alt="">
@@ -293,7 +293,7 @@
   </div>
   </div>
 </section id="section-7">
-<div class="container"  >
+<div class="container" id = "stacks"  >
     <div class="row p-3 align-items-center">
         <div class="col-md"> 
           <div>
@@ -644,7 +644,7 @@
 </section>
 
 <section id ="questions"class="p-5">
-  <div class="container">
+  <div class="container" id="faqs">
     <h3 class="text-center mb-4 red">Got Questions? </h3>
       <h1 class="text-center mb-4">Frequently Asked Questions </h1>
       <div class="accordion accordion-flush" id="questions">
@@ -728,15 +728,15 @@
   </div>
  
 </section>
-<section class="section-8">
-  <div class="container ">
-  <div class="row p-5 g-5 ">
-    <div class="col-6 bg-dark text-light p-5"> 
+<section class="section-8d">
+
+    <div class=" d-flex justify-content-evenly">
+    <div class="bg-dark text-light p-5 section-8"> 
       <h1>Full-time</h1>
       <p>Requires at least 25 hours weekly on program content.</p>
       <h5>Available Tracks</h5>
       <ul>
-        <li>Full Stack: Backend (Python, JavaScript), Frontend (HTML, CSS, JavaScript) & DevOps </li>
+        <li>Full Stack: Backend (Python, JavaScript), <br> Frontend (HTML, CSS, JavaScript) & DevOps </li>
         <li>Design: Figma, Adobe XD</li>
       </ul>
       <h5>Phases: </h5>
@@ -753,14 +753,14 @@
         <li>Zuri Talent Pool</li>
         <li>More Training: </li>      
 Interview Prep
-Algorithms & Data Structure
+Algorithms & Data Structure <br>
 Freelance Setup & Training
 LinkedIn Optimization
 
 CV Review
       </ul>
     </div>
-    <div class="col-6 p-5" id="hap">
+    <div class="bg-dark text-light p-5 section-8">
 <h1>Part-time</h1>
 <p>Requires at least 11 hours weekly on program content.</p>
 <h5>Available Tracks:</h5>
@@ -789,16 +789,42 @@ HTML, CSS, JavaScript
   </div>
 
 </section>
+<div class="section9d">
 <section class="sect">
   <div class="container text-center">
-  <div class="break p-5 text-light
+  <div class="break p-5 text-light" >
     <p> Get Started </p>
     <h1>Break into the tech industry like a Pro</h1>
+ 
     <button id="enroll2"> Enroll now</button>
   </div>
 
 </div>
 </section>
+</div>
+<div class="footer-clean">
+  <footer>
+      <div class="container text-dark">
+        <div class="d-flex justify-content-between">
+          <div class="zuri">
+          <img src="2nd-images\logo.svg" alt="">
+          <h6>  &copy 2020 ZURI TEAM </h6> </div>
+          <div class="social">
+            <ul class="social-icons">
+              <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
+              <li><a class="twitter" href="#"><i class="bi bi-linkedin"></i></a></li>
+              <li><a class="dribbble" href="#"><i class="bi bi-twitter"></i></a></li>
+      </ul>
+      <div class="privacy">
+        <p>Privacy Policy</p>
+        <p>
+          Ingressive For Good</p>
+      </div>
+      
+          </div>
+        </div>
+      </div>
+  </footer></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js
 "></script>
 </body>
