--- a/index2.html
+++ b/index2.html
@@ -297,7 +297,7 @@
     <div class="row p-3 align-items-center">
         <div class="col-md"> 
           <div>
-            <div class="card" style="width: 20rem;">
+            <div class="card p-3" style="width: 20rem;">
           <h4> Frontend Development</h4>
             <div class>
               <div class="img7">
@@ -356,7 +356,7 @@
         </div>
         <div class="col-md"> 
           <div class>
-            <div class="card" style="width: 20rem;">
+            <div class="card p-3" style="width: 20rem;">
           <h4> Backend Development</h4>
             <div>
               <div class="img7">
@@ -414,7 +414,7 @@
         </div>
         <div class="col-md"> 
           <div>
-            <div class="card" style="width: 20rem;">
+            <div class="card p-3" style="width: 20rem;">
           <h4> Product Design </h4>
             <div >
               <div class="img7">
@@ -449,7 +449,7 @@
         </div>
         <div class="col-md"> 
           <div >
-            <div class="card" style="width: 20rem;">
+            <div class="card p-3" style="width: 20rem;">
           <h4> DevOPS</h4>
             <div >
               <div class="img7">
@@ -521,7 +521,7 @@
               </div>
               <div class="col-md"> 
                 <div>
-                  <div class="card" style="width: 20rem;">
+                  <div class="card p-3" style="width: 20rem;">
                 <h4>Fullstack Development</h4>
                   <div>
                     <div class="img7">
@@ -610,7 +610,7 @@
                     </div>
                     <div class="col-md"> 
                       <div >
-                        <div class="card" style="width: 20rem;">
+                        <div class="card p-3" style="width: 20rem;">
                       <h4> Frameworks</h4>
                         <div>
                           <div class="img7">
